--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   fl_chart: ^0.68.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  flutter_holo_date_picker: ^1.1.3
+  time_picker_spinner_pop_up: ^2.0.0
 
 dev_dependencies:
   flutter_test:
